--- a/public/css/myvote.css
+++ b/public/css/myvote.css
@@ -2,16 +2,13 @@ body {
 	background-color: #E6E6E6;
 }
 
-.padding {
-  padding-top: 150px;
+.picture-size {
+  width: 100%;
+  height: 100%;
 }
 
-.sitecontainer{
-  position: relative;
-  max-width: 600px;
-  margin: 0 auto;
-  min-height: 100%;
-  background: white;
+.padding {
+  padding-top: 200px;
 }
 
   .modal-header, .close {
